[package]
name = "code-visualizer"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "code-vis"
path = "src/main.rs"
test = false
doctest = false

[lib]
test = false
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prodash = { version = "19.0.1", features = ["render-line", "render-line-crossterm", "signal-hook", "render-line-autoconfigure", "progress-tree"] }
open = "3.0.2"
clap = { version = "3.2.20", features = ["derive"] }
bstr = "0.2.17"
anyhow = "1.0.63"
signal-hook = "0.3.14"
image = "0.23.14"
syntect = "4.6.0"
ignore = "0.4.18"