[package]
name = "codevis"
version = "0.1.1"
edition = "2021"
description = "A tool for turning your code into one large image"
license = "MIT"
repository = "https://github.com/sloganking/codevis"

[[bin]]
name = "codevis"
path = "src/main.rs"
test = false
doctest = false

[lib]
test = false
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prodash = { version = "20.0.0", features = ["render-line", "render-line-crossterm", "signal-hook", "render-line-autoconfigure", "progress-tree", "unit-bytes"] }
memmap2 = "0.5.7"
num_cpus = "1.13.1"
flume = { version = "0.10.14", default-features = false }
open = "3.0.2"
clap = { version = "3.2.20", features = ["derive"] }
bytesize = "1.1.0"
bstr = "1.0.0"
anyhow = "1.0.63"
signal-hook = "0.3.14"
image = "0.24"
syntect = "5.0.0"
ignore = "0.4.18"
